# barcode-matrix

./: README.md  pyproject.toml
config/: config.yaml
notebooks/: theory.ipynb
src/: main.py  matrix.py  process.py  visualize.py
tests/: conftest.py  test_matrix.py
